Insert connection to database, phase 1
